# plano-rs

./: .gitignore  Cargo.toml  Makefile  README.md  SECURITY.md  justfile
.github/workflows/: ci-linux.yml  ci-macos.yml  publish-crates.yml  rust-clippy.yml  rust.yml
crates/api/: Cargo.toml  build.rs
crates/api/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: format.rs  lib.rs
crates/rds-sync/: Cargo.toml
crates/rds-sync/src/: lib.rs
docs/: ARCHITECTURE.md  ROADMAP.md
proto/: analytics.proto
