[workspace]
members = [
    "crates/api",
    "crates/core",
    "crates/rds-sync",
    "crates/bin/queryd",
    "crates/bin/sync-cli",
    "crates/bin/query-cli",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1"
arrow = {version = "55" }
clap = {version = "4.5", features = ["derive"] }
datafusion = "46"
parquet = { version = "55", features = ["arrow"] }
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1", features = ["full"] }
tonic = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
glob = "0.3.2"
rustyline = "15"
dirs = "6"
warp = "0.3"
chrono = { version = "0.4", features = ["serde"] }

