[workspace]
members = [
    "crates/api",
    "crates/core",
    "crates/rds-sync",
    "crates/bin/plano-serv",
    "crates/bin/plano-sync",
    "crates/bin/plano-repl",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1"
arrow = {version = "55" }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = {version = "4.5", features = ["derive"] }
datafusion = "46"
deadpool-postgres = "0.10"
dirs = "6"
futures = "0.3"
glob = "0.3.2"
lru = "0.14"
metrics = {version = "0.24", features = [] }
metrics-exporter-prometheus = "0.17"
object_store = { version = "0.11.2", features = ["aws"] }
ocra = { git = "https://github.com/lancedb/ocra.git" }
parquet = { version = "55", features = ["arrow"] }
prost = "0.13"
rustyline = "15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
tempfile = "3.6"
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
tokio-postgres = "0.7"
tonic = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
urlencoding = "2"
warp = "0.3"
