[workspace]
members = [
    "crates/api",
    "crates/core",
    "crates/rds-sync",
    "crates/bin/plano-serv",
    "crates/bin/plano-sync",
    "crates/bin/plano-repl",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1"
arrow = {version = "56" }
chrono = { version = "0.4", features = ["serde"] }
clap = {version = "4.5", features = ["derive"] }
datafusion = "49"
dirs = "6"
glob = "0.3.2"
lru = "0.16"
metrics = {version = "0.24", features = [] }
object_store = { version = "0.12.1", features = ["aws"] }
parquet = { version = "56", features = ["arrow"] }
prost = "0.14"
rustyline = "17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
tempfile = "3.6"
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }
tonic = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2"
warp = "0.3"
url = "2"
futures = "0.3"
bytes = "1"
# ocra = { git = "https://github.com/lancedb/ocra.git" } # Temporarily disabled - requires object_store 0.11.2
metrics-exporter-prometheus = "0.17"
