[package]
name = "rds-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "chrono"] }
arrow = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
plano-core = { path = "../core" }

